--- a/src/Component2/Pages/Profile/Profile.css
+++ b/src/Component2/Pages/Profile/Profile.css
@@ -66,6 +66,16 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
 
+  .FirName p,
+  .SrName p,
+  .User p,
+  .Email p,
+  .Pass p,
+  .Comp p {
+    color: #333;
+    font-size: 18px;
+  }
+
   .Pass {
     cursor: pointer;
   }
@@ -87,6 +97,13 @@
     width: 15%;
     height: 8vh;
     background-color: #dc3545;
+    font-size: 15px;
+    color: white;
+  }
+  .ProfileDescWrap .ProfileFooter .Pbtn1 {
+    width: 15%;
+    height: 8vh;
+    background-color: #0455B4;
     font-size: 15px;
     color: white;
   }
