--- a/src/Authentication/SignUpPage/SignUpMedia.css
+++ b/src/Authentication/SignUpPage/SignUpMedia.css
@@ -81,11 +81,21 @@
         gap: 110px;
     }
     .SignUpInputWrap1 .BTN{
+        width: 70%;
+        height: 80%;
+        color: #0455B4;
+        /* padding-left: 20%; */
+        border-radius: 5px;
+        padding: 20px 10% 20px 10%;
+        background-color: white;
+        /* background-color: #04b43f; */
+    }
+    .SignUpInputWrap1 .BTN1{
         width: 100%;
         height: 80%;
         /* padding-left: 20%; */
         border-radius: 5px;
-        padding: 20px 10% 20px 10%;
+        /* padding: 20px 10% 20px 10%; */
         background-color: #0455B4;
         /* background-color: #04b43f; */
     }
