--- a/src/Authentication/VerifyPage/UserVerifyPage/UserVerifyPage.css
+++ b/src/Authentication/VerifyPage/UserVerifyPage/UserVerifyPage.css
@@ -80,4 +80,37 @@
     color:#0455B4;
   }
 
+  @media screen and (max-width: 426px) {
+    .verifypagewrap{
+      width: 90%;
+    height: 50%;
+    background-color: rgb(36, 104, 163);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
+    .verificationpageaction{
+      text-align: center;
+    }
+    .verificationcontinue{
+      text-align: center;
+    }
+  }
+  @media screen and (max-width: 768px) {
+    .verifypagewrap{
+      width: 90%;
+    height: 50%;
+    background-color: aliceblue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
+    .verificationpageaction{
+      text-align: center;
+    }
+  }
   
